@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed unsaved changes precondition
 4.0.6
 	+ Fixed postinst script
 4.0.5
